<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <RelativeLayout
        android:id="@+id/login_header"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/primary_dark"
        android:paddingTop="16dp"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/app_titulo"
            android:textAppearance="@style/titulo"
            android:textDirection="locale"
            android:id="@+id/login_header_titulo"
            />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/login_header_titulo"
            android:layout_alignBottom="@+id/login_header_titulo"
            android:src="@drawable/bmi" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/login_wavetop"

        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@+id/login_header"
        android:src="@drawable/ic_wave_down"
        android:scaleType="fitXY"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
    />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/login_wavetop"
        android:layout_above="@+id/login_wavebottom"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingEnd="32dp"
            android:paddingStart="32dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_loginTitulo"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_loginSubTitulo"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                >

                <EditText
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email"
                    android:drawableStart="@drawable/email_24"
                    android:drawablePadding="8dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_senha"
                    android:inputType="numberPassword"
                    android:drawableStart="@drawable/lock_24"
                    android:drawablePadding="8dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_entrar"
                android:padding="16dp"
                android:id="@+id/botao_entrar"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_lembrar_me"
                android:layout_gravity="end"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_esqueci_a_senha"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAllCaps="false"
                android:padding="0dp"
                android:layout_gravity="end"
                android:layout_marginTop="-20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                >
                <TextView
                    
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_nao_tem_conta"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_criar_uma_conta_agora"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textAllCaps="false"
                    android:padding="0dp"
                    android:layout_marginStart="8dp"

                    android:id="@+id/botao_criar_conta"
                    />
            </LinearLayout>
        </LinearLayout>



    </ScrollView>

    <ImageView
        android:id="@+id/login_wavebottom"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_wave_up"
        android:scaleType="fitXY"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_origem"

        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_margin="2dp"

        android:textColor="@color/white"
        />

</RelativeLayout>