<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/degrade"
        android:gravity="center"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/delicia"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="Jailson Mendes"
            android:textColor="@color/white"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="Ator"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >
            <TextView

                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="26.9"
                android:textColor="@color/white"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1696"
                android:textColor="@color/white"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="69"
                style="@style/TextAppearance.MaterialComponents.Headline6"

                />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="69"
                android:textColor="@color/white"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView

                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/imc"
                android:textStyle="bold"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ncd"
                android:textStyle="bold"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/idade"
                android:textStyle="bold"
                android:textColor="@color/white"

                />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/peso"
                android:textStyle="bold"
                android:textColor="@color/white"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/chart"
                    android:layout_gravity="center"
                    android:id="@+id/imagemCard1"
                    />
                    <TextView

                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ver_historico"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_gravity="start"
                        android:layout_toRightOf="@+id/imagemCard1"
                        android:id="@+id/tituloCard1"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rever_conquistas"
                        android:layout_alignLeft="@+id/tituloCard1"

                        android:layout_marginTop="3dp"
                        android:layout_below="@+id/tituloCard1"

                        />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="4dp"
               >
               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/peso"
                   android:layout_gravity="center"
                   />
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:paddingStart="8dp"
                   android:padding="4dp"
                   android:orientation="vertical"

                   android:layout_gravity="center"
                   >
                   <TextView
                       android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/pesar_agora"
                   style="@style/TextAppearance.MaterialComponents.Headline6"
                       android:layout_gravity="start"
                   />
                   <TextView
                       android:layout_marginTop="4dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/acompanhe_peso"
                       />
               </LinearLayout>
           </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>